--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -22,7 +22,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1, preferred,auto,auto
+monitor=HDMI-A-1, 1920x1080@165,auto,auto
 
 
 ###################
@@ -45,12 +46,10 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet &
 exec-once = waybar
-exec-once = swww
+exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 exec-once = libnotify
 exec-once = mako
-# exec-once = waybar & hyprpaper & firefox
 
 
 #############################
@@ -70,7 +69,7 @@ env = HYPRCURSOR_SIZE,24
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
-general { 
+general {
     gaps_in = 2
     gaps_out = 10
 
@@ -81,7 +80,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -95,7 +94,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     drop_shadow = true
     shadow_range = 4
@@ -107,7 +106,7 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        
+
         vibrancy = 0.1696
     }
 }
@@ -140,9 +139,9 @@ master {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
+misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -157,6 +156,9 @@ input {
     kb_model =
     kb_options =
     kb_rules =
+
+    repeat_delay = 200
+    repeat_rate = 40
 
     follow_mouse = 1
 
@@ -188,14 +190,22 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+# Hyprland
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, T, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Terminal
+bind = $mainMod, RETURN, exec, $terminal
+
+# Apps
+bind = $mainMod, N, exec, $fileManager
+bind = $mainMod, B, exec, firefox
+
+# Rofi
+bind = $mainMod, Space, exec, $menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
