setup waybar conf

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -46,10 +46,10 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = waybar
+exec-once = ~/nix-config/waybar/launch.sh
 exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
-exec-once = libnotify
-exec-once = mako
+# exec-once = libnotify
+# exec-once = mako
 
 
 #############################
@@ -142,6 +142,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    disable_splash_rendering = true
 }
 
 
@@ -206,6 +207,9 @@ bind = $mainMod, B, exec, firefox
 
 # Rofi
 bind = $mainMod, Space, exec, $menu
+
+# Waybar Reload
+bind = $mainMod SHIFT, B, exec, ~/nix-config/waybar/launch.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
