--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -35,7 +35,7 @@ monitor=HDMI-A-1, 1920x1080@165,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = fuzzel
 
 
 #################
@@ -50,6 +50,7 @@ exec-once = ~/nix-config/waybar/launch.sh
 exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 # exec-once = libnotify
 # exec-once = mako
+exec-once = aw-server
 
 
 #############################
@@ -76,7 +77,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(cba6f7aa) rgba(b4befeaa) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -192,8 +193,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # Hyprland
-bind = $mainMod, W, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, W, killactive,
+bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -212,10 +213,10 @@ bind = $mainMod, Space, exec, $menu
 bind = $mainMod SHIFT, B, exec, ~/nix-config/waybar/launch.sh
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
