added launch waybar to hyprland

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -47,6 +47,7 @@ $menu = fuzzel
 
 # exec-once = $terminal
 exec-once = ~/nix-config/waybar/launch.sh
+# exec-once = waybar -c ~/nix-config/waybar/theme-config -s ~/nix-config/waybar/style.css
 exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 # exec-once = libnotify
 # exec-once = mako
