updated tiling and waybar

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -46,8 +46,8 @@ $menu = fuzzel
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = ~/nix-config/waybar/launch.sh
-# exec-once = waybar -c ~/nix-config/waybar/theme-config -s ~/nix-config/waybar/style.css
+# exec-once = ~/nix-config/waybar/launch.sh
+exec-once = waybar -c ~/nix-config/waybar/theme-config -s ~/nix-config/waybar/style.css
 exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 # exec-once = libnotify
 # exec-once = mako
@@ -131,8 +131,10 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
+    force_split = 2
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    permanent_direction_override = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
