added fullscreen keybind

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -201,6 +201,7 @@ bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
 
 # Terminal
 bind = $mainMod, RETURN, exec, $terminal
