changed resolution and updated blur

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1, preferred,auto,auto
+monitor=eDP-1, 1920x1080@165,auto,auto
 monitor=HDMI-A-1, 1920x1080@165,auto,auto
 
 
@@ -50,7 +50,7 @@ $menu = fuzzel
 exec-once = waybar -c ~/nix-config/waybar/theme-config -s ~/nix-config/waybar/style.css
 exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 # exec-once = libnotify
-# exec-once = mako
+exec-once = mako
 exec-once = aw-server
 
 
@@ -106,8 +106,11 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 3
+        new_optimizations = on
+        ignore_opacity = on
+        xray = false
 
         vibrancy = 0.1696
     }
