updated hyprland conf

--- a/modules/nixos/hyprland/configs/hyprland.conf
+++ b/modules/nixos/hyprland/configs/hyprland.conf
@@ -23,7 +23,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1, 1920x1080@165,auto,auto
-monitor=HDMI-A-1, 1920x1080@165,auto,auto
+# monitor=eDP-1, preferred,auto,auto
+monitor=HDMI-A-1, 1920x1080@165,auto-right,auto,bitdepth,10
 
 
 ###################
@@ -52,6 +53,7 @@ exec-once = swww init & swww img ~/nix-config/misc/wallpapers/minimal-earth.jpg
 # exec-once = libnotify
 exec-once = mako
 exec-once = aw-server
+exec-once = wl-paste --watch cliphist store
 
 
 #############################
@@ -203,8 +205,24 @@ bind = $mainMod SHIFT, W, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
+# bind = $mainMod, X, exec, grim -g "$(slurp -o -r -c '#ff0000ff')" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+# bind = , mouse:274, exec, ;
+
+# Multimedia
+# l -> do stuff even when locked
+# e -> repeats when key is held
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
+bindle=, XF86MonBrightnessUp, exec, brightnessctl set 1%+
+bindle=, XF86MonBrightnessDown, exec, brightnessctl set 1%-
+# bindle=, XF86Search, exec, launchpad
+# bindl=, XF86AudioMute, exec, amixer set Master toggle
+bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called play , but it toggles 
+bindl=, XF86AudioNext, exec, playerctl next 
+bindl=, XF86AudioPrev, exec, playerctl previous
 
 # Terminal
 bind = $mainMod, RETURN, exec, $terminal
@@ -269,10 +287,13 @@ bindm = $mainMod, mouse:273, resizewindow
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# Firefox Picture-in-Picture
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = move 67% 72%, title:^(Picture-in-Picture)$
+windowrulev2 = size 33% 28%, title:^(Picture-in-Picture)$
